# VioAVR

./: .gitignore  ABOUT.md  AT90CAN128_metadata.json  AT90PWM1_metadata.json  ATmega328P_metadata.json  ATmega328_metadata.json  ATmega3290A_metadata.json  ATmega32U4_metadata.json  ATmega4809_metadata.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  TODO.md  TODO_ATMEGA328P.md  a.out  all_modules.txt  atmega2560_meta.json  atmega2560_metadata.json  atmega328.json  count_cpp_code.py  integration_stress.hex  output.txt  scratch_328p.json  state_snapshot.md  test_four_ramp.txt  test_help.cir  test_init.cpp  test_output.txt  tmppwm.json  viospice.cm
cosim/: CMakeLists.txt  avr_cosim_shim.cpp
cosim/avr_analog_bridge/: cfunc.c  dlmain.c  ifspec.c
src/core/: CMakeLists.txt  ac8x.cpp  adc.cpp  adc10b.cpp  adc8x.cpp  adcea.cpp  amplifier.cpp  analog_comparator.cpp  avr_cpu.cpp  avr_jit.cpp  awex.cpp  bridge_shm_client.cpp  bridge_shm_server.cpp  bridge_shm_server.cpp_gdb_part  can.cpp  ccl.cpp  cfd.cpp  cpu_control.cpp  cpu_int.cpp  crc8x.cpp  dac.cpp  dac8x.cpp  device.cpp  device_catalog.cpp  dma.cpp  ebi.cpp  eeprom.cpp  eusart.cpp  evsys.cpp  ext_interrupt.cpp  gdb_stub.cpp  gpio_port.cpp  hc05.cpp  hex_image.cpp  io_peripheral.cpp  ircom.cpp  lcd_controller.cpp  lin.cpp  machine.cpp  memory_bus.cpp  (+41 more)
src/qt/: CMakeLists.txt  qt_sync_bridge.cpp
tests/: CMakeLists.txt  batch_fix_tests.py  blink.c  blink.elf  blink.hex  final_fix_tests.py  fix_all_remaining.py  fix_all_tests.py  fix_run_calls.py  input_test.c  input_test.elf  input_test.hex  integration_stress.c  integration_stress.elf  make_tests.py  test0.c  test0.elf  test0.hex  test_adc.c  test_eeprom.c  test_ext_interrupt.c  test_ext_interrupt.elf  test_ext_interrupt.hex  test_interrupt.c  test_interrupt.elf  test_interrupt.hex  test_math.c  test_math.elf  test_math.hex  test_math_advanced.c  test_math_advanced.elf  test_math_advanced.hex  test_spwm.c  test_timer_ctc.c  test_timer_pwm.c  test_uart.c  uart8x_stress_test.c  uart_hello.hex  uart_hello_16mhz.hex  uart_stress_test.c  (+2 more)
tests/core/: CMakeLists.txt  adc_fidelity_test.cpp  at90pwm316_adc_pwm_integration_test.cpp  at90pwm316_fidelity_test.cpp  at90pwm316_fidelity_test_dump.cpp  at90pwm316_pid_test.cpp  at90pwm_cycle_by_cycle_test.cpp  atmega2560_timers_test.cpp  atmega328p_voltmeter_test.cpp  avr8x_adc_fidelity_test.cpp  avr8x_ccl_evsys_fidelity_test.cpp  avr8x_ccl_fidelity_test.cpp  avr8x_ccl_sequential_test.cpp  avr8x_clkctrl_fidelity_test.cpp  avr8x_cpu_int_test.cpp  avr8x_cpuint_fidelity_test.cpp  avr8x_crc_fidelity_test.cpp  avr8x_evsys_fidelity_test.cpp  avr8x_evsys_test.cpp  avr8x_gpio_fidelity_test.cpp  avr8x_nvm_fidelity_test.cpp  avr8x_rtc_fidelity_test.cpp  avr8x_spi_fidelity_test.cpp  avr8x_sysctrl_fidelity_test.cpp  avr8x_tca_fidelity_test.cpp  avr8x_tcb_fidelity_test.cpp  avr8x_tcb_pulse_width_test.cpp  avr8x_twi_fidelity_test.cpp  avr8x_uart_evsys_fidelity_test.cpp  avr8x_unified_map_test.cpp  avr8x_usart_fidelity_test.cpp  avr8x_wdt_fidelity_test.cpp  avr8x_zcd_fidelity_test.cpp  bridge_shm_test.cpp  c_api_misuse_test.c  c_api_test.c  can_fidelity_test.cpp  can_protocol_fidelity_test.cpp  can_stability_test.cpp  cpu_adc_auto_trigger_firmware_test.cpp  (+124 more)
tests/core/attiny/: attiny13_fidelity_test.cpp  attiny1634_fidelity_test.cpp  attiny412_fidelity_test.cpp  attiny85_fidelity_test.cpp  attiny861_fidelity_test.cpp
tests/core/avr8x/: avr8x_ac8x_extended_test.cpp  avr8x_ac_extended_test.cpp  avr8x_ac_fidelity_test.cpp  avr8x_adc8x_extended_test.cpp  avr8x_adc_fidelity_test.cpp  avr8x_adc_free_running_test.cpp  avr8x_adcea_fidelity_test.cpp  avr8x_bod_extended_test.cpp  avr8x_ccl_evsys_fidelity_test.cpp  avr8x_ccl_fidelity_test.cpp  avr8x_ccl_rslatch_test.cpp  avr8x_ccl_seq_fidelity_test.cpp  avr8x_ccl_sequential_test.cpp  avr8x_ccl_sequential_unit_test.cpp  avr8x_clkctrl_extended_test.cpp  avr8x_clkctrl_fidelity_test.cpp  avr8x_cpu_int_test.cpp  (+37 more)
tests/cosim/: cosim_generic_fw.c
tests/custom_chip/: CMakeLists.txt  README.md  TEST_KIT_SUMMARY.md  custom_avr.hpp  pin_accuracy_validator.py  test_custom_avr.cpp
tests/feature_tests/: adc_trigger.S  bootloader_test.S  cpu_pc_order.S  io_trace.csv  sleep_wake.S  sleep_wake.elf  sleep_wake.hex
tests/firmware/: adc_pwm.c  adc_pwm.elf  adc_pwm.hex  adc_test_compare.c  adc_test_compare.elf  adc_test_compare.hex  analog_comparator_test.c  atmega16_inverter_pwm.c  atmega328p_inverter_pwm.c  atmega808_test.c  atmega8_test.c  benchmark.c  blinky.c  eeprom_test.c  ext_int_test.c  i2c_scanner_loopback.c  inverter_psc_pwm.c  nop_bench.c  pin_change_test.c  psc_pid.c  psc_test.c  simavr_compare.c  spi_loopback.c  spi_test.c  sysmon.c  timer1_interrupt_compare.c  timer1_interrupt_compare.elf  timer1_interrupt_compare.hex  timer2_async_test.c  timer_pwm_compare.c  timer_pwm_compare.elf  timer_pwm_compare.hex  twi_eeprom_test.c  uart_test_compare.c  uart_test_compare.elf  uart_test_compare.hex  voltmeter.c  wdt_test.c
tests/programs/: Makefile  README.md  alu.c  alu.elf  alu.lst  alu_bare.c  alu_bare.elf  alu_bare.lst  branches.c  branches.elf  branches.lst  compare.c  compare.elf  compare.lst  compare_simavr.py  compare_traces.py  extract_simavr_trace.py  extract_trace.gdb  gdb_trace.py  gen_gdb_script.py  io_ports.c  io_ports.elf  io_ports.lst  load_store.c  load_store.elf  load_store.lst  simavr_compare.py  simavr_compare_new.py  simavr_trace.gdb  simavr_tracer.c  small_ops.c  small_ops.elf  small_ops.lst  smoke.c  smoke.elf  smoke.lst  stack.c  stack.elf  stack.lst  test_mcusr.c  (+12 more)
tools/oscope/: CMakeLists.txt  analysis_dialog.cpp  instrument_detector.cpp  instrument_detector.h  instrument_panel.cpp  instrument_panel.h  lcd_widget.cpp  lcd_widget.h  lcd_window.cpp  lcd_window.h  led_matrix_widget.cpp  led_matrix_widget.h  led_matrix_window.cpp  led_matrix_window.h  main.cpp  main_window.cpp  main_window.h  measurement_dialog.cpp  segment7_widget.cpp  segment7_widget.h  segment7_window.cpp  segment7_window.h  theme.cpp  theme_manager.cpp  waveform_viewer.cpp  waveform_viewer.h
(+1720 files in other folders)
